# noise_repellent

./: CMakeLists.txt  README.md
src/: denoise.c  noise_repellent.c
